syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "user.proto";

option go_package = "github.com/gitsuki/simplebank/pb";

message LoginUserRequest {
    string username = 1;
    string password = 2;
} 

message LoginUserResponse {
    string session_id = 1;
    string access_token = 2;
    string refresh_token = 3;
    User user = 4;
    google.protobuf.Timestap access_token_expires_at = 5;
    google.protobuf.Timestap refresh_token_expires_at = 6;
}